--- a/templates/analyses/report/show.html
+++ b/templates/analyses/report/show.html
@@ -45,6 +45,7 @@
                                 {% endif %}
                                 <a href="{% url "analyses.views.image" analysis.image_id %}" class="btn"><i class="icon-download"></i> Download</a>
                                 <a href="{% url "analyses.views.image" analysis.image_id %}" class="action_print btn btn-info"><i class="icon-print"></i> Print</a>
+                                <a href="{% url "analyses.views.delete_analysis" analysis.image_id %}" class="btn btn-danger"><i class="icon-trash"></i> Delete</a>
                             </h1>
                         </div>
                     </div>
