--- a/templates/analyses/report/show.html
+++ b/templates/analyses/report/show.html
@@ -150,6 +150,11 @@
 
 {# JS #}
 <script src="{{ STATIC_URL }}js/jquery.easing.1.3.js.js"></script>
+<script src="{{ STATIC_URL }}js/tag-it.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
+{# CSS #}
+<link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.tagit.css">
+<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/flick/jquery-ui.css">
 
 <div id="comment">
     <div class="right_btn">
@@ -157,6 +162,12 @@
     </div>
     <div class="commentFormDiv">
         <table>
+            <tr>
+                <td>
+                    <small><em>Image tag</em></small> <small><span class="pull-right comment_close"><a href="#">Close</a></span></small>
+                    <input name="tags" id="tag">
+                </td>
+            </tr>
             <tr>
                 <td>
                     <form method="post" action="{% url "analyses.views.add_comment" analysis.id %}">{% csrf_token %}
@@ -185,5 +196,11 @@
         </table>
     </div>
 </div>
+
+<script>
+$(document).ready(function() {
+    $("#tag").tagit();
+});
+</script>
 
 {% endblock %}
