Fixed tooltip bug

--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -137,6 +137,9 @@ $(function () {
                 text: 'Analyses'
             }
         },
+        tooltip: {
+            enabled: false
+        },
         series: [{
             name: 'Completed analyses',
             color: "#A8CD59",
