--- a/templates/analyses/report/show.html
+++ b/templates/analyses/report/show.html
@@ -185,7 +185,7 @@
                                 {% for comment in analysis.comments.all %}
                                 <li>
                                     <p class="title"><small class="text-info">{{ comment.owner.username }}</small> <small class="pull-right">{{ comment.created_at }}</small></p>
-                                    <p class="pull-right"><a href=""><i class="icon-trash"></i> </a></p>
+                                    <p class="pull-right"><a href="{% url "analyses.views.delete_comment" comment.id %}"><i class="icon-trash"></i> </a></p>
                                     <p>{{ comment.message }}</p>
                                 </li>
                                 {% endfor %}
