Added dependance page

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -25,6 +25,9 @@
                     <li>
                         <a href="{% url "users.views.admin_list_activity" %}">Activity</a>
                     </li>
+                    <li>
+                        <a href="">Dependence</a>
+                    </li>
                 </ul>
                 <div class="tab-content">
                     <div class="tab-pane active" id="users">
