--- a/templates/analyses/cases/_map_image.html
+++ b/templates/analyses/cases/_map_image.html
@@ -2,7 +2,7 @@
 
 <div id="map_canvas"></div>
 
-<script>
+<script type="text/javascript">
 $(document).ready(function(){
     internetStatus();
 });
