--- a/templates/analyses/cases/_thum_image.html
+++ b/templates/analyses/cases/_thum_image.html
@@ -9,9 +9,9 @@
                <div class="tools">
                    <a href="{% url "analyses.views.show_analysis" image.id %}" title="Show report"> <i class="icon-list-alt"> </i></a>
                    {% if image.favorites.all %}
-                        <a href="#" id="{% url "analyses.views.favorite" image.id %}" rel="{{ image.id }}" title="Add to favorites" class="favorite btn-warning star{{image.id}}"> <i class="icon-star"> </i></a>
+                        <a id="{% url "analyses.views.favorite" image.id %}" rel="{{ image.id }}" class="favorite btn-warning star{{image.id}}"> <i class="icon-star"> </i></a>
                    {% else %}
-                        <a href="#" id="{% url "analyses.views.favorite" image.id %}" rel="{{ image.id }}" title="Add to favorites" class="favorite star{{image.id}}"> <i class="icon-star"> </i></a>
+                        <a id="{% url "analyses.views.favorite" image.id %}" rel="{{ image.id }}" class="favorite star{{image.id}}"> <i class="icon-star"> </i></a>
                    {% endif %}
                    <a class="fancybox" href="{% url "analyses.views.image" image.image_id %}" title="{{ image.file_name }}"><i class="icon-picture"> </i></a>
                </div>
